fix: :art: Fix Card overflow

--- a/src/pages/Home/components/Card/Card.module.css
+++ b/src/pages/Home/components/Card/Card.module.css
@@ -17,6 +17,7 @@
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.0294384);
   border-radius: 5px;
   margin: 0 auto;
+  overflow: hidden;
   width: 264px;
 }
 
